<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    style="@style/root"
    tools:context="android.example.com.singlescreenapp.MainActivity">


    <TextureView
        android:id="@+id/textureView"
        style="@style/mediaContainer"/>


    <ImageView
        android:id="@+id/headerLogo"
        style="@style/headerLogo"
        android:contentDescription="@string/cd_headerLogo"/>



    <FrameLayout
        android:id="@+id/fragment_container"
        style="@style/containerMainP" />

    <!--<LinearLayout
        style="@style/containerMainP">

        <TextView
            style="@style/welcome_portrait"
            android:text="@string/welcomeMsg1"/>

        <TextView
            style="@style/welcomeMsg2"
            android:text="@string/welcomeMsg2"/>

        <TextView
            style="@style/welcome_portrait"
            android:text="@string/welcomeMsg3"/>

    </LinearLayout>-->


    <LinearLayout
        style="@style/syndicationContainerP">

        <ImageButton
            android:id="@+id/btn_facebook"
            style="@style/syndication"
            android:contentDescription="@string/cd_facebook"
            android:src="@drawable/icon_facebook"
            android:tag="@string/tagFacebook"/>

        <ImageButton
            android:id="@+id/btn_twitter"
            style="@style/syndication"
            android:contentDescription="@string/cd_twitter"
            android:src="@drawable/icon_twitter"
            android:tag="@string/tagTwitter"/>

        <ImageButton
            android:id="@+id/btn_mail"
            style="@style/syndication"
            android:contentDescription="@string/cd_mail"
            android:src="@drawable/icon_mail"
            android:tag="@string/tagEmail"/>

        <ImageButton
            android:id="@+id/btn_phone"
            style="@style/syndication"
            android:contentDescription="@string/cd_phone"
            android:src="@drawable/icon_phone"
            android:tag="@string/tagPhoneCall"/>

        <ImageButton
            android:id="@+id/btn_map"
            style="@style/syndication"
            android:contentDescription="@string/cd_map"
            android:src="@drawable/icon_maps"
            android:tag="@string/tagMap"/>

    </LinearLayout>


</RelativeLayout>
